--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -6,6 +6,28 @@
 	year = {2012},
 }
 
+@article{bagby1994twenty,
+  title={The twenty-item Toronto Alexithymia Scale—I. Item selection and cross-validation of the factor structure},
+  author={Bagby, R Michael and Parker, James DA and Taylor, Graeme J},
+  journal={Journal of psychosomatic research},
+  volume={38},
+  number={1},
+  pages={23--32},
+  year={1994},
+  publisher={Elsevier}
+}
+
+@article{vorst2001validity,
+  title={Validity and reliability of the Bermond--Vorst alexithymia questionnaire},
+  author={Vorst, Harrie CM and Bermond, Bob},
+  journal={Personality and individual differences},
+  volume={30},
+  number={3},
+  pages={413--434},
+  year={2001},
+  publisher={Elsevier}
+}
+
 @book{CameronTrivedi2013,
   author    = {A. Colin Cameron and Pravin K. Trivedi},
   title     = {Regression Analysis of Count Data},
@@ -451,6 +473,17 @@
   pages={e0277894},
   year={2022},
   publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{cabrera2018assessing,
+  title={Assessing body awareness and autonomic reactivity: Factor structure and psychometric properties of the Body Perception Questionnaire-Short Form (BPQ-SF)},
+  author={Cabrera, Ana and Kolacz, Jacek and Pailhez, Guillem and Bulbena-Cabre, Andrea and Bulbena, Antonio and Porges, Stephen W},
+  journal={International journal of methods in psychiatric research},
+  volume={27},
+  number={2},
+  pages={e1596},
+  year={2018},
+  publisher={Wiley Online Library}
 }
 
 @article{gaggero2021,
