--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -6,6 +6,106 @@
 	year = {2012},
 }
 
+@article{kroenke2007anxiety,
+  title={Anxiety disorders in primary care: prevalence, impairment, comorbidity, and detection},
+  author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW and Monahan, Patrick O and L{\"o}we, Bernd},
+  journal={Annals of internal medicine},
+  volume={146},
+  number={5},
+  pages={317--325},
+  year={2007},
+  publisher={American College of Physicians}
+}
+
+@article{zsido2020development,
+  title={Development of the short version of the spielberger state—trait anxiety inventory},
+  author={Zsido, Andras N and Teleki, Szidalisz A and Csokasi, Krisztina and Rozsa, Sandor and Bandi, Szabolcs A},
+  journal={Psychiatry research},
+  volume={291},
+  pages={113223},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{zanarini2003zanarini,
+  title={Zanarini Rating Scale for Borderline Personality Disorder (ZAN-BPD): a continuous measure of DSM-IV borderline psychopathology},
+  author={Zanarini, Mary C},
+  journal={Journal of personality disorders},
+  volume={17},
+  number={3},
+  pages={233--242},
+  year={2003},
+  publisher={Guilford Press}
+}
+
+@article{brewer2016alexithymia,
+  title={Alexithymia: a general deficit of interoception},
+  author={Brewer, Rebecca and Cook, Richard and Bird, Geoffrey},
+  journal={Royal Society open science},
+  volume={3},
+  number={10},
+  pages={150664},
+  year={2016},
+  publisher={The Royal Society}
+}
+
+@article{kroenke2002phq,
+  title={The PHQ-15: validity of a new measure for evaluating the severity of somatic symptoms},
+  author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW},
+  journal={Psychosomatic medicine},
+  volume={64},
+  number={2},
+  pages={258--266},
+  year={2002},
+  publisher={LWW}
+}
+
+@article{messer1995development,
+  title={Development of a short questionnaire for use in epidemiological studies of depression in children and adolescents: Factor composition and structure across development},
+  author={Messer, Stephen C and Angold, Adrian and Costello, E Jane and Loeber, Rolf and Van Kammen, Welmoet and Stouthamer-Loeber, Magda},
+  journal={International journal of methods in psychiatric research},
+  volume={5},
+  pages={251--262},
+  year={1995},
+  publisher={JOHN WILEY \& SONS LTD.}
+}
+
+@article{kroenke2001phq,
+  title={The PHQ-9: validity of a brief depression severity measure},
+  author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW},
+  journal={Journal of general internal medicine},
+  volume={16},
+  number={9},
+  pages={606--613},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{kroenke2003patient,
+  title={The Patient Health Questionnaire-2: validity of a two-item depression screener},
+  author={Kroenke, Kurt and Spitzer, Robert L and Williams, Janet BW},
+  journal={Medical care},
+  volume={41},
+  number={11},
+  pages={1284--1292},
+  year={2003},
+  publisher={LWW}
+}
+
+@article{beck1996beck,
+  title={Beck depression inventory--II},
+  author={Beck, Aaron T and Steer, Robert A and Brown, Gregory},
+  journal={Psychological assessment},
+  year={1996}
+}
+
+@article{spielberger1970manual,
+  title={Manual for the State-Trait Anxiety Inventory (self-evaluation questionnaire)},
+  author={Spielberger, Charles Donald},
+  journal={(No Title)},
+  year={1970}
+}
+
 @article{bagby1994twenty,
   title={The twenty-item Toronto Alexithymia Scale—I. Item selection and cross-validation of the factor structure},
   author={Bagby, R Michael and Parker, James DA and Taylor, Graeme J},
