--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -59,6 +59,74 @@
   year={2002},
   publisher={LWW}
 }
+@article{sibley2011mini,
+  title={The Mini-IPIP6: Validation and extension of a short measure of the Big-Six factors of personality in New Zealand.},
+  author={Sibley, Chris G and Luyten, Nils and Purnomo, Missy and Mobberley, Annelise and Wootton, Liz W and Hammond, Matthew D and Sengupta, Nikhil and Perry, Ryan and West-Newman, Tim and Wilson, Marc Stewart and others},
+  journal={New Zealand Journal of Psychology},
+  volume={40},
+  number={3},
+  year={2011}
+}
+
+@article{clifton2021brief,
+  title={Brief measures of the four highest-order primal world beliefs.},
+  author={Clifton, Jeremy DW and Yaden, David B},
+  journal={Psychological Assessment},
+  volume={33},
+  number={12},
+  pages={1267},
+  year={2021},
+  publisher={American Psychological Association}
+}
+
+@article{costa1992normal,
+  title={Normal personality assessment in clinical practice: The NEO Personality Inventory.},
+  author={Costa, Paul T and McCrae, Robert R},
+  journal={Psychological assessment},
+  volume={4},
+  number={1},
+  pages={5},
+  year={1992},
+  publisher={American Psychological Association}
+}
+@article{lang2011short,
+  title={Short assessment of the Big Five: Robust across survey methods except telephone interviewing},
+  author={Lang, Frieder R and John, Dennis and L{\"u}dtke, Oliver and Schupp, J{\"u}rgen and Wagner, Gert G},
+  journal={Behavior research methods},
+  volume={43},
+  pages={548--567},
+  year={2011},
+  publisher={Springer}
+}
+@article{thimm2016personality,
+  title={The Personality Inventory for DSM-5 Short Form (PID-5-SF): psychometric properties and association with big five traits and pathological beliefs in a Norwegian population},
+  author={Thimm, Jens C and Jordan, Stian and Bach, Bo},
+  journal={BMC psychology},
+  volume={4},
+  pages={1--11},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{hoekstra2011construction,
+  title={The construction and validation of an abridged version of the autism-spectrum quotient (AQ-Short)},
+  author={Hoekstra, Rosa A and Vinkhuyzen, Anna AE and Wheelwright, Sally and Bartels, Meike and Boomsma, Dorret I and Baron-Cohen, Simon and Posthuma, Danielle and Van Der Sluis, Sophie},
+  journal={Journal of autism and developmental disorders},
+  volume={41},
+  pages={589--596},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{davidson2016schizotypal,
+  title={Schizotypal personality questionnaire--brief revised (updated): An update of norms, factor structure, and item content in a large non-clinical young adult sample},
+  author={Davidson, Charlie A and Hoffman, Lesa and Spaulding, William D},
+  journal={Psychiatry research},
+  volume={238},
+  pages={345--355},
+  year={2016},
+  publisher={Elsevier}
+}
 
 @article{messer1995development,
   title={Development of a short questionnaire for use in epidemiological studies of depression in children and adolescents: Factor composition and structure across development},
