--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -406,7 +406,6 @@ Heart/Breathing pair (r = 0.151) whilst the strongest correlation with the auton
 The weakest correlation between the body awareness and the IAS was with the Hungry/Thirsty pair (r =  0.055) and between the autonomic reactivity and the IAS was with the Heart/Breathing pair (r = -0.106). 
 
 <!-- MAIA -->
-
 The MAIA was one of the most commonly used measures of interoception in our study, with nine samples reporting its use. 
 This 37-item questionnaire assesses eight state-trait dimensions of interoception: Noticing, Not-Distracting, Not-Worrying, Attention Regulation, Emotional Awareness, Self-Regulation, Body Listening, and Trust. 
 Responses are rated on a scale from 0 (Never) to 5 (Always).
@@ -416,7 +415,6 @@ Notably, the strongest correlations were observed between the Noticing dimension
 The Not-Distracting and Not-Worrying subscales were generally positively correlated with IAS pairings, with a few exceptions: Not-Distracting showed minimal correlation with Cough/Sneeze (r = 0.0206) and Heart/Breathing (r = -0.007), while Not-Worrying had a low correlation with Itch/Bruise (r = 0.031).
 
 <!-- ICQ -->
-
 The Interoceptive Confusion Questionnaire (ICQ; @brewer2016alexithymia) was used to assess individuals' difficulties in interpreting non-affective physiological states, such as pain and hunger. The ICQ consists of 20 items rated on a scale from 1 ("Does not describe me") to 5 ("Describes me very well"), with higher scores indicating greater interoceptive confusion.
 
 The ICQ showed weak to moderate negative correlations with all IAS pairings. The strongest correlation was observed with the Hunger/Thirsty pairing (r = 0.348), while the weakest was with the Itch/Bruise pairing (r = 0.207).
@@ -448,12 +446,65 @@ Depression measures showed weak to moderate negative correlations with IAS pairi
 The BDI (r = -0.372), PHQ-2 (r = -0.148), and PHQ-9 (r = -0.241) correlated most with the Hungry/Thirsty pair, while the MFQ correlated most with Heart/Breathing (r = -0.345) pair.
 
 <!-- Somatic concerns  -->
- 
-The PHQ-15 also showed its strongest correlation with the Hungry/Thirsty pair (r = -0.241) but was, on average, weakly and negatively correlated with all other IAS pairings.
+The PHQ-15 is a 15-item questionnaire that assesses somatic symptoms on a 3-point scale (e.g., back pain). 
+It exhibited its strongest correlation with the Hungry/Thirsty pair (r = -0.241) and, on average, showed weak negative correlations with all other IAS pairings.
 
 <!-- Borderline personality -->
+Lastly, the MSI-BPD is a 10-item questionnaire used to assess personality disorder, where items are rated on a dichotomous scale of 1 (present) and 0 (absent). 
+The MSI-BPD also showed its strongest negative correlation with the Hungry/Thirsty pair (r = -0.140) and was negatively correlated with all other pairings, except for Cough/Sneeze, which showed a slight positive correlation (r = 0.0219).
 
-Lastly, the MSI-BPD also showed its strongest negative correlation with the Hungry/Thirsty pair (r = -0.140) and was negatively correlated with all other pairings, except for Cough/Sneeze, which showed a slight positive correlation (r = 0.0219).
+#### Correlations with psychopathology measures 
+
+<!-- Maladaptive  -->
+Maladaptive personality traits were assessed using the Personality Inventory for DSM-5 Short Form [PID-5-SF; @thimm2016personality], which measures five domains: disinhibition, antagonism, detachment, negative affect, and psychoticism. 
+The scale consists of 25 items rated on a 4-point Likert scale, ranging from 0 (very false or often false) to 3 (very true or often true).
+
+On average, all maladaptive personality traits assessed by the PID-5-SF were weakly and negatively correlated with IAS pairings. The strongest correlation was observed between the psychoticism dimension and the Muscle/Pain pairing (r = -0.173).
+
+<!-- Schyzoty -->
+Schizotypy was assessed using the Schizotypal Personality Questionnaire – Brief Revised Updated (SPQ-BRU; @davidson2016schizotypal), which consists of 32 items rated on a 5-point Likert scale ranging from strongly agree to strongly disagree. 
+This questionnaire evaluates four primary dimensions: cognitive-perceptual (positive), interpersonal (negative), disorganized, and social anxiety. 
+These dimensions are further divided into nine secondary factors: constricted affect, eccentricity, magical thinking, lack of close friends, odd speech, referential thinking, social anxiety, suspiciousness, and unusual perceptions.
+
+On average, all nine factors were weakly and negatively correlated with IAS pairings, with correlations ranging from r = -0.170 (between lack of close friends and Muscles/Pain) to r = 0.102 (between magical thinking and Itch/Bruise).
+
+<!-- Autism -->
+The short version of the Autism-Spectrum Quotient (ASQ-Short; Hoekstra et al., 2011) was used to assess five autistic traits: social skills, adherence to routines, cognitive flexibility (switching), imagination, and patterns/numbers. 
+The questionnaire consists of 28 items rated on a 4-point Likert scale, ranging from 1 (definitely agree) to 4 (definitely disagree).
+
+Overall, all pairings were weakly and negatively correlated with the ASQ dimensions, except for the Itch/Bruise and Heart/Breathing pairings, which showed weak positive correlations with the patterns/numbers trait (r = 0.184 and r = 0.038, respectively). 
+The strongest correlation was observed between the imagination trait and the Wind/Burp pairing (r = -0.218).
+
+#### Correlations with personality measures
+
+The Big Five Inventory-Short Form [BFI-S; @lang2011short] and the Mini International Personality Item Pool [Mini-IPIP6; @sibley2011mini] were used to assess general personality traits. 
+The BFI-S consists of 15 items rated on a 7-point Likert scale, ranging from 1 (strongly disagree) to 7 (strongly agree), measuring five personality factors: Openness, Conscientiousness, Extraversion, Agreeableness, and Neuroticism.
+The Mini-IPIP6 assesses six personality traits—Extraversion, Agreeableness, Conscientiousness, Neuroticism, Openness, and Honesty-Humility—using 24 items. 
+While this questionnaire is typically scored on a 7-point Likert scale from 1 (very inaccurate) to 7 (very accurate), an analogous scale was used in the respective sample. 
+Lastly, the Neuroticism subscale of the NEO Five-Factor Inventory [Neo-FFI; @costa1992normal] was used to assess Neuroticism, consisting of 12 items rated on a 5-point Likert scale from 1 (strongly disagree) to 5 (strongly agree).
+
+To assess correlations with the IAS pairings, scores were grouped across personality dimensions due to the overlap among these traits (with the exception of Honesty-Humility). 
+On average, IAS pairings were positively associated with most personality dimensions, though these correlations were generally weak.
+The strongest correlation was observed between Conscientiousness and the Hungry/Thirsty pairing (r = 0.164).
+Both Honesty-Humility and Neuroticism were weakly and negatively correlated with the IAS pairings, with the highest correlations observed for the Hungry/Thirsty pairing (r = -0.217 and r = -0.200, respectively).
+
+#### Correlations with other measures
+
+<!-- PI -->
+
+The IAS was also correlated with primal world beliefs, as measured by the Primal Inventory [PI-18; @clifton2021brief], which assesses beliefs about the world being alive, good, safe, and enticing. 
+Items that evaluate neutral beliefs about the hierarchical order of importance in the world (i.e., hierarchical), as well as beliefs about the comprehensibility of most things and situations (i.e., understandable), and the belief that the world is characterized by flux (i.e., changing) were added as well.
+
+Overall, most primal beliefs show weak positive correlations with all pairings of the IAS. The strongest correlation is between the hierarchical belief and the Hungry/Thirsty pairing (r = 0.181). 
+Some beliefs, however, exhibit negative correlations with certain pairings. 
+These negative correlations range from r = -0.0940 between the changing belief and the Hungry/Thirsty pairing, to r = -0.00490 between the Enticing belief and the Itch/Bruise pairing.
+
+<!-- GCBS -->
+
+<!-- LIE -->
+
+
+
 
 ![**Figure 2.** Correlates of the IAS](figures/clipboard-1619164537.png){width="911"}
 
